fix:header overflow

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
 }
 
 header h1 {
-  width: 100%;
   margin: 0px;
   padding: var(--base-size-16, 15px);
   background-color: #010409;
